--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -2,6 +2,8 @@
 .head {
   padding: 20px 0;
   color: #fff;
+  position: relative;
+  z-index: 99;
 }
 .logo h1 {
   font-size: 35px;
@@ -15,6 +17,8 @@
 header {
   background-color: rgba(255, 255, 255, 0.2);
   margin: 0 30px;
+  position: relative;
+  z-index: 99;
 }
 header .nav {
   display: flex !important;
@@ -96,4 +100,5 @@ header ul li a:hover {
     width: 100%;
     background-color: #1eb2a6;
   }
+ 
 }
