--- a/src/components/pricing/price.css
+++ b/src/components/pricing/price.css
@@ -27,6 +27,10 @@
   background-color: #fff;
   margin-bottom: 20px;
 }
+.faq .container .text{
+  /* background: rebeccapurple; */
+  padding: 20px;
+}
 .faq button {
   padding: 0;
   margin: 0;
@@ -39,7 +43,7 @@
   font-weight: 500;
 }
 .faq p {
-  padding: 20px;
+  /* padding: 0 0 0 20px; */
 }
 .faq .accordion:hover {
   background-color: #1eb2a6;
